src/objects/History_Tracking__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Holds the fields for specific objects that will be tracked in custom history objects.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marks the current field history tracking record as actively tracked or not.  If not active the field will not be tracked in history</description>
        <inlineHelpText>Marks the current field history tracking record as actively tracked or not.  If not active the field will not be tracked in history</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name_API__c</fullName>
        <description>The API name of the Field for the associated object to track</description>
        <inlineHelpText>The API name of the Field for the associated object to track</inlineHelpText>
        <label>Field Name (API)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_API__c</fullName>
        <description>The API name of the Object for the associated field to track</description>
        <inlineHelpText>The API name of the Object for the associated field to track</inlineHelpText>
        <label>Object Name (API)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>History Tracking</label>
</CustomObject>